# django-response-compression

./: .travis.yml  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
response_compression/: compress.py  decorators.py  middleware.py
